2012-03-02  6.7.5-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-9, SVN revision 7043.

2012-02-29  6.7.5-9 Cristy  <quetzlzacatenango@image...>
  * Caption no long includes the prefix "caption:" in the rendered text.

2012-03-02  6.7.5-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-8, SVN revision 7027.

2012-03-02  6.7.5-8 Glenn Randers-Pehrson <glennrp@image...>
  * non-verbose identify now reports DirectClass for transparent PNG images 
    to agree with the report by identify -verbose.  (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20448 and
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=15482).

2012-02-29  6.7.5-8 Cristy  <quetzlzacatenango@image...>
  * Support infinite caption lengths.
  * Permit custome JPEG quantization tables (e.g.
	  -define jpeg:q-table=quantization-table.xml).
  * Missing grestore from ps2.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20445).

2012-02-29  6.7.5-8 Anthony Thyssen <A.Thyssen@griffith...>
  * Added Image list options (like "-delete" and "-swap") to "montage".

2012-02-25  6.7.5-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-7, SVN revision 6965.

2012-02-23  6.7.5-7 Cristy  <quetzlzacatenango@image...>
  * Add support for the EMFPlus delegate program.

2012-02-22  6.7.5-7 Anthony Thyssen <A.Thyssen@griffith...>
  * Re-added the Iterative Distance function in morphology (as apposed to the
    faster more direct 2-pass Distance Function that replaced it) so it can be
    used in the special situation of  Constrainted Distance Morphology.
    http://www.imagemagick.org/discourse-server/viewtopic.php??f=2&t=18032

2012-02-13  6.7.5-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-6, SVN revision 6851.

2012-02-13  6.7.5-6 Cristy  <quetzlzacatenango@image...>
  * Only set PDF & PS page size when explicitedly requested (e.g. -page).
