@@ -13,7 +13,7 @@ PACKAGE_NAME='ImageMagick'
 PACKAGE_VERSION='6.7.5'
 PACKAGE_PERL_VERSION='6.75'
 PACKAGE_LIB_VERSION="0x675"
-PACKAGE_RELEASE="10"
+PACKAGE_RELEASE="9"
 PACKAGE_LIB_VERSION_NUMBER="6,7,5,${PACKAGE_RELEASE}"
 PACKAGE_RELEASE_DATE=`date +%F`
 PACKAGE_STRING="$PACKAGE_NAME $PACKAGE_VERSION"
